2013-02-02  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (emptyString): New constant.
	(initScheme): Bind "$[$" and "$]$" tp emptyString.

2013-01-20  Per Bothner  <per@bothner.com>

	* lang/Translator.java (checkDefaultBinding): Handle $entity$:NAME,
	where NAME is a standard enity names, such as "apos".
	* standard/Scheme.java (initScheme): Define $string$, $format$,
	$entity$, and $construct$.

2013-01-13  Per Bothner  <per@bothner.com>

	* Shell.java (runFile, compileSource): Tweaks to better handle
	exceptions while parsing/compiling, including SyntaxExceptions.

2012-12-26  Per Bothner  <per@bothner.com>

	* standard/readchar.java: Fix to handle surrogate characters.
	(readChar(Reader)): Reimplement usting
	new LineBufferedReader static methods.
	(readChar(InPort)): Remove.

2012-12-22  Per Bothner  <per@bothner.com>

	* standard/throw_name.java: Remove class.  Instead re-implement
	'throw' function in Scheme.
	* standard/Makefile.am (java_sources): Update accordingly.
	* standard/Scheme.java (initScheme): Likewise.

2012-12-19  Charles Turner  <chturne@gmail.com>

	* lang/Translator.java (checkDefaultBinding): Removed references
	to Scheme.unitNamespace. It has now been moved to LispLanguage.
	* standard/Scheme.java: Factored the unitNamespace into LispLanguage.
	* standard/define_alias.java: Updated references to unitNamespace.
	* standard/define_unit.java: Removed unused imports (unrelated to
	the unitNamespace refactoring). Updated references to unitNamespace.

2012-12-17  Charles Turner  <chturne@gmail.com>

	* standard/SchemeCompilation.java (checkDefaultBinding): Factored
	out into Translator.
	* standard/SchemeCompilation.java: Update imports accordingly.
	* lang/Translator.java: Updated with the factored code from
	SchemeCompilation, imports updated.

2012-12-15  Per Bothner  <per@bothner.com>

	* standard/prim_throw.java: Move to gnu/kawa/reflect/Throw.java.
	* standard/Scheme.java (initScheme): Update accordingly.