@@ -1,3 +1,8 @@
+2013-02-13  Per Bothner  <per@bothner.com>
+
+	* lang/SyntaxForms.java (PairWithPositionSyntaxForm): New member class.
+	(makeWithTemplate): Take 3rd optional source-location parameter.
+
 2013-02-02  Per Bothner  <per@bothner.com>
 
 	* standard/Scheme.java (emptyString): New constant.
